# MyLogger

./: .gitignore  CMakeLists.txt  logger.conf  main.cpp  readme.md
benchmarks/: Bechmark-report-v-0-1.md  CMakeLists.txt  benchmark-report-0-2.md  benchmark_IO_overhead.cpp  benchmark_config.cpp  benchmark_config_file_loading.cpp  benchmark_console_logging_end_to_end.cpp  benchmark_logger.cpp  benchmark_multi_threaded_logging.cpp  benchmark_queue_throughput.cpp
demo/: CMakeLists.txt  logger_controller.cpp  logger_controller.hpp  main.cpp  taskManager.cpp  taskManager.hpp
demo/advanced_demo/: CMakeLists.txt  advanced_logger_demo.cpp  advanced_logger_demo.hpp  main.cpp
demo/basic_demo/: CMakeLists.txt  logger_controller.hpp  main.cpp
demos/: CMakeLists.txt
demos/advanced_demo/: CMakeLists.txt  main.cpp
demos/basic_demo/: CMakeLists.txt  logger_controller.hpp  main.cpp
include/: color_module.hpp  consoleBackend.hpp  console_backend.h  console_backend.hpp  fileBackend.hpp  file_backend.h  file_backend.hpp  file_watcher.hpp  format_module.hpp  logBackend.hpp  logContext.hpp  logLevel.hpp  logMessage.hpp  logger.h  logger.hpp  loggerConfig.hpp  loggerLib.hpp  loggerManager.hpp  loggerSettings.hpp  logger_config.hpp  logger_core.hpp  logger_modules.hpp  my_logger.hpp  stringUtils.hpp
include/backends/: console_backend.hpp  file_backend.hpp  mock_backend.hpp
include/myLogger/: file_watcher.hpp  logger.hpp  loggerAPI.hpp  logger_config.hpp  logger_core.hpp  logger_factory.hpp  logger_instance.hpp  my_logger.hpp
include/myLogger/backends/: console_backend.hpp  file_backend.hpp  mock_backend.hpp
src/: color_module.cpp  consoleBackend.cpp  console_backend.cpp  fileBackend.cpp  file_backend.cpp  file_watcher.cpp  format_module.cpp  logger.cpp  loggerConfig.cpp  loggerManager.cpp  loggerSettings.cpp  logger_config.cpp  logger_core.cpp
src/backends/: console_backend.cpp  console_backend_win.cpp  file_backend.cpp
tests/: CMakeLists.txt  test_logger.cpp
